--- a/src/main/resources/static/registerAccount.html
+++ b/src/main/resources/static/registerAccount.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Register - CareerTracker</title>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
 </head>
 <body>
 
@@ -17,13 +17,13 @@
 
     <form id="acctForm">
         <label for="email">Email</label>
-        <input id="email" name="email" type="email" required>
+        <input id="email" type="email" required>
 
         <label for="password">Password</label>
-        <input id="password" name="password" type="password" required>
+        <input id="password" type="password" required>
 
         <label for="type">Account Type</label>
-        <select id="type" name="type">
+        <select id="type">
             <option value="CONSUMER">Consumer</option>
             <option value="COMPANY">Company</option>
         </select>
