--- a/src/main/resources/static/registerUser.html
+++ b/src/main/resources/static/registerUser.html
@@ -14,7 +14,7 @@
 </header>
 
 <main>
-    <h2>Register</h2>
+    <h2>Register User</h2>
 
     <form id="registerForm">
         <label for="email">Email</label>
