--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,13 +33,33 @@
     <p id="message"></p>
 
     <script>
+
     document.getElementById('acctForm').addEventListener('submit', async function(e){
         e.preventDefault();
+
         const data = { email: document.getElementById('email').value, password: document.getElementById('password').value, type: document.getElementById('type').value };
         const res = await fetch('/Account/insertAccount', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify(data) });
+
         const msg = document.getElementById('message');
-        if (res.ok) { msg.style.color='green'; msg.textContent='Account created'; } else { msg.style.color='red'; msg.textContent='Failed'; }
-    });
+        if (!res.ok) {
+            msg.style.color = 'red';
+            msg.textContent = 'Failed';
+            return;
+        }   
+
+        msg.style.color = 'green';
+        msg.textContent = 'Account created';
+
+        setTimeout(() => {
+            if (data.type === 'COMPANY') {
+                window.location.href = '/registerCompany.html';
+            } else {
+                window.location.href = '/registerUser.html';
+            }
+        }, 300);
+        });
+
+        conosole.log("AAAAAIUTTTOTOOOOOO")
     </script>
 </main>
 
