--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,71 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>CareerTracker</title>
+        <link rel="stylesheet" href="/css/style.css">
+    </head>
+    <body>
+        <header>
+            <h1>CareerTracker</h1>
+        </header>
 
-<header>
-    <h1>CareerTracker</h1>
-</header>
+        <main>
+            <p>Welcome — pick an action:</p>
+            <div>
+                <a href="/registerAccount.html"><button>Register</button></a>
+                <a href="/login.html"><button>Login</button></a>
+            </div>
+        </main>
 
-<main>
-    <h2>Create Account</h2>
-
-    <form id="acctForm">
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email" required>
-
-        <label for="password">Password</label>
-        <input id="password" name="password" type="password" required>
-
-        <label for="type">Account Type</label>
-        <select id="type" name="type">
-            <option value="CONSUMER">Consumer</option>
-            <option value="COMPANY">Company</option>
-        </select>
-
-        <button type="submit">Continue Registration</button>
-    </form>
-    <p id="message"></p>
-
-    <script>
-
-    document.getElementById('acctForm').addEventListener('submit', async function(e){
-        e.preventDefault();
-
-        const data = { email: document.getElementById('email').value, password: document.getElementById('password').value, type: document.getElementById('type').value };
-        const res = await fetch('/Account/insertAccount', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify(data) });
-
-        const msg = document.getElementById('message');
-        if (!res.ok) {
-            msg.style.color = 'red';
-            msg.textContent = 'Failed';
-            return;
-        }   
-
-        msg.style.color = 'green';
-        msg.textContent = 'Account created';
-
-        setTimeout(() => {
-            if (data.type === 'COMPANY') {
-                window.location.href = '/registerCompany.html';
-            } else {
-                window.location.href = '/registerUser.html';
-            }
-        }, 300);
-        });
-
-        conosole.log("AAAAAIUTTTOTOOOOOO")
-    </script>
-</main>
-
-<footer>
-    <p>© 2026 CareerTracker</p>
-</footer>
-
-</body>
+        <footer>
+            <p>© 2026 CareerTracker</p>
+        </footer>
+    </body>
 </html>
