setup teh page header

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <header>
-            <h1>CareerTracker</h1>
+            <a class="site-title" href="/index.html">CareerTracker</a>
         </header>
 
-        <main>
+        <main class="index-landing">
             <p>Welcome — pick an action:</p>
-            <div>
+            <div class="button-group">
                 <a href="/registerAccount.html"><button>Register</button></a>
                 <a href="/login.html"><button>Login</button></a>
             </div>
