--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -7,10 +7,15 @@
 	<title>User Dashboard</title>
 </head>
 <body>
-<header><h1>User Dashboard</h1></header>
-<main>
+<header>
+	<a class="site-title" href="/index.html">CareerTracker</a>
+</header>
+<main class="wide-card">
+	<h2>User Dashboard</h2>
 	<p>Welcome, user. Use the navigation to manage your data.</p>
 </main>
-<footer>© 2026 CareerTracker</footer>
+<footer>
+	<p>© 2026 CareerTracker</p>
+</footer>
 </body>
 </html>
