--- a/src/main/resources/static/registerCompany.html
+++ b/src/main/resources/static/registerCompany.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Company Registration - CareerTracker</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
 
 <header>
-    <h1>CareerTracker</h1>
-    <p>Company Profile Registration</p>
+    <a class="site-title" href="/index.html">CareerTracker</a>
 </header>
 
-<main>
+<main class="wide-card">
     <h2>Create Your Company Profile</h2>
 
     <form id="companyForm">
