--- a/src/main/resources/static/registerUser.html
+++ b/src/main/resources/static/registerUser.html
@@ -9,11 +9,10 @@
 <body>
 
 <header>
-    <h1>CareerTracker</h1>
-    <p>Create your account</p>
+    <a class="site-title" href="/index.html">CareerTracker</a>
 </header>
 
-<main>
+<main class="wide-card">
     <h2>Register User</h2>
 
     <form id="registerForm">
