--- a/src/main/resources/static/indexCompany.html
+++ b/src/main/resources/static/indexCompany.html
@@ -7,10 +7,15 @@
 	<title>Company Dashboard</title>
 </head>
 <body>
-<header><h1>Company Dashboard</h1></header>
-<main>
+<header>
+	<a class="site-title" href="/index.html">CareerTracker</a>
+</header>
+<main class="wide-card">
+	<h2>Company Dashboard</h2>
 	<p>Welcome, company. Use the navigation to manage your company profile.</p>
 </main>
-<footer>© 2026 CareerTracker</footer>
+<footer>
+	<p>© 2026 CareerTracker</p>
+</footer>
 </body>
 </html>
