--- a/src/main/resources/static/registerAccount.html
+++ b/src/main/resources/static/registerAccount.html
@@ -9,10 +9,10 @@
 <body>
 
 <header>
-    <h1>CareerTracker</h1>
+    <a class="site-title" href="/index.html">CareerTracker</a>
 </header>
 
-<main>
+<main class="wide-card">
     <h2>Create Account</h2>
 
     <form id="acctForm">
