--- a/src/main/resources/static/registerAccount.html
+++ b/src/main/resources/static/registerAccount.html
@@ -24,7 +24,7 @@
 
         <label for="type">Account Type</label>
         <select id="type" name="type">
-            <option value="CONSUMER">Consumer</option>
+            <option value="USER">User</option>
             <option value="COMPANY">Company</option>
         </select>
 
