now logins set on the lcoastorage the accountid and email fo the user just authenticated

--- a/src/main/resources/static/indexCompany.html
+++ b/src/main/resources/static/indexCompany.html
@@ -13,6 +13,10 @@
 <main class="wide-card">
 	<h2>Company Dashboard</h2>
 	<p>Welcome, company. Use the navigation to manage your company profile.</p>
+
+	<div style="margin-top:1rem;">
+		<a href="/profileCompany.html"><button>View profile</button></a>
+	</div>
 </main>
 <footer>
 	<p>© 2026 CareerTracker</p>
