--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -13,6 +13,10 @@
 <main class="wide-card">
 	<h2>User Dashboard</h2>
 	<p>Welcome, user. Use the navigation to manage your data.</p>
+
+	<div style="margin-top:1rem;">
+		<a href="/profileUser.html"><button>View profile</button></a>
+	</div>
 </main>
 <footer>
 	<p>© 2026 CareerTracker</p>
