--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -44,24 +44,41 @@
             return;
         }
 
-        // Parse returned AccountDTO and redirect based on its `type` field
-        let accountDTO;
-        try {
-            accountDTO = await res.json();
-        } catch (err) {
-            msg.style.color = 'red';
-            msg.textContent = 'Login succeeded but response parsing failed';
-            return;
-        }
-
+        // Server returned OK for authentication (boolean). Now fetch accounts to find the authenticated account
         msg.style.color = 'green';
         msg.textContent = 'Login successful';
 
-        const type = accountDTO.type;
-        if (type == "USER") {
-            window.location.href = '/indexUser.html';
-        } else {
-            window.location.href = '/indexCompany.html';
+        try {
+            const accountsRes = await fetch('/Account/getAllAccounts');
+            if (!accountsRes.ok) {
+                msg.style.color = 'red';
+                msg.textContent = 'Could not retrieve account info.';
+                return;
+            }
+            const accounts = await accountsRes.json();
+            const account = accounts.find(a => String(a.email) === String(email));
+            if (!account) {
+                msg.style.color = 'red';
+                msg.textContent = 'Account record not found.';
+                return;
+            }
+
+            // store into localStorage
+            try {
+                if (account.email) localStorage.setItem('loggedEmail', account.email);
+                const acctId = account.accountId ?? account.account_id ?? account.id ?? null;
+                if (acctId) localStorage.setItem('loggedAccountId', String(acctId));
+            } catch (_) {}
+
+            const t = (account.type) ? String(account.type).toUpperCase() : '';
+            if (t.includes('COMPANY')) {
+                window.location.href = '/indexCompany.html';
+            } else {
+                window.location.href = '/indexUser.html';
+            }
+        } catch (err) {
+            msg.style.color = 'red';
+            msg.textContent = 'Error retrieving account information.';
         }
 
         
