now both registeraccount and login htmls bring to indexes

--- a/src/main/resources/static/registerAccount.html
+++ b/src/main/resources/static/registerAccount.html
@@ -57,11 +57,11 @@
         // redirect to next registration step
         if (data.type === 'COMPANY') {
             setTimeout(() => {
-                window.location.href = '/registerCompany.html';
+                window.location.href = '/indexCompany.html';
             }, 500);
         } else {
             setTimeout(() => {
-                window.location.href = '/registerUser.html';
+                window.location.href = '/indexUser.html';
             }, 500);
         }
     });
