--- a/src/main/resources/static/profileCompany.html
+++ b/src/main/resources/static/profileCompany.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a class="site-title" href="/index.html">CareerTracker</a>
+      <a class="site-title" href="/indexCompany.html">CareerTracker</a>
     </header>
 
     <main class="wide-card">
