almost fixed method to get all the posts fo a specfiic company

--- a/src/main/resources/static/indexCompany.html
+++ b/src/main/resources/static/indexCompany.html
@@ -22,6 +22,10 @@
 		<button id="logoutBtn">Logout</button>
 	</div>
 
+	<div style="margin-top:1rem;">
+		<a href="/displayJobPost.html"><button>Job Posts</button></a>
+	</div>
+
 	<script>
 	document.getElementById('logoutBtn').addEventListener('click', function(){
 		// Clear all localStorage entries to fully sign out the client
