--- a/src/main/resources/static/indexUser.html
+++ b/src/main/resources/static/indexUser.html
@@ -19,6 +19,10 @@
 	</div>
 
 	<div style="margin-top:1rem;">
+		<a href="/displayJobApplication.html"><button>Job Applications</button></a>
+	</div>
+
+	<div style="margin-top:1rem;">
 		<button id="logoutBtn">Logout</button>
 	</div>
 
